# pyo3-special-method-derive

./: .typos.toml  Cargo.toml  README.md  test.py
.github/workflows/: ci.yml  rust.yml
examples/all/: main.rs
examples/dict/: main.rs
examples/getattr/: main.rs
examples/skips/: main.rs
pyo3_special_method_derive/: Cargo.toml  README.md
pyo3_special_method_derive/examples/all/: main.rs
pyo3_special_method_derive/examples/skips/: main.rs
pyo3_special_method_derive/src/: lib.rs
pyo3_special_method_derive/tests/: complex_enum_formatter.rs  dict_enum_skipped.rs  dict_enum_unit.rs  dict_enum_unit_skipped.rs  dict_skipped.rs  dir_enum_skip_complex.rs  dir_enum_skip_unit.rs  dir_skip.rs  ellipsis.rs  empty_complex_enum.rs  enum_str_repr_skip.rs  enum_str_repr_skip_complex.rs  enum_str_repr_skip_str_repr.rs  functional_enum_complex.rs  functional_struct_nested.rs  functional_struct_pub_and_attr_skip.rs  getattr.rs  getattr_enum.rs  getattr_enum_skipped.rs  getattr_enum_skipped_unit.rs  getattr_enum_unit.rs  richcmp.rs  struct_formatter.rs  struct_str_repr_pub_skip.rs  struct_str_repr_skip.rs  struct_str_repr_skip_str_repr.rs  tuple_struct_formatter.rs  unit_enum_formatter.rs
pyo3_special_method_derive_0_21/: Cargo.toml
pyo3_special_method_derive_0_21/examples/all/: main.rs
pyo3_special_method_derive_0_21/examples/dict/: main.rs
pyo3_special_method_derive_0_21/examples/getattr/: main.rs
pyo3_special_method_derive_0_21/examples/skips/: main.rs
pyo3_special_method_derive_0_21/src/: lib.rs
pyo3_special_method_derive_0_21/tests/: complex_enum_formatter.rs  dict.rs  dict_enum.rs  dict_enum_skipped.rs  dict_enum_unit.rs  dict_enum_unit_skipped.rs  dict_skipped.rs  dir_enum_complex.rs  dir_enum_skip_complex.rs  dir_enum_skip_unit.rs  dir_skip.rs  dir_struct.rs  ellipsis.rs  empty_complex_enum.rs  enum_str_repr_skip.rs  enum_str_repr_skip_complex.rs  enum_str_repr_skip_str_repr.rs  functional_enum_complex.rs  functional_struct.rs  functional_struct_nested.rs  functional_struct_pub_and_attr_skip.rs  functional_struct_pub_skip.rs  general_skip.rs  getattr.rs  getattr_enum.rs  getattr_enum_skipped.rs  getattr_enum_skipped_unit.rs  getattr_enum_unit.rs  richcmp.rs  struct_formatter.rs  struct_str_repr_pub_skip.rs  struct_str_repr_skip.rs  struct_str_repr_skip_str_repr.rs  tuple_struct_formatter.rs  unit_enum_formatter.rs
pyo3_special_method_derive_core/: Cargo.toml  README.md
pyo3_special_method_derive_core/examples/all/: main.rs
pyo3_special_method_derive_core/examples/dict/: main.rs
pyo3_special_method_derive_core/src/: lib.rs  parse_attr.rs  str_repr.rs
pyo3_special_method_derive_core/tests/: dict_enum.rs  dict_enum_unit_skipped.rs  dir_enum_complex.rs  dir_enum_skip_unit.rs  dir_skip.rs  enum_str_repr_skip.rs  enum_str_repr_skip_complex.rs  enum_str_repr_skip_str_repr.rs  functional_struct_pub_and_attr_skip.rs  functional_struct_pub_skip.rs  getattr_enum.rs
pyo3_special_method_derive_example/: Cargo.toml  debugging.py  pyproject.toml  testing.py
pyo3_special_method_derive_example/src/: lib.rs
pyo3_special_method_derive_example_0_21/: Cargo.toml  README.md  debugging.py
pyo3_special_method_derive_example_0_21/src/: lib.rs
pyo3_special_method_derive_lib/: Cargo.toml
pyo3_special_method_derive_lib/src/: lib.rs
pyo3_special_method_derive_lib/tests/: ellipsis.rs
pyo3_special_method_derive_macro/: Cargo.toml  README.md
pyo3_special_method_derive_macro/src/: lib.rs  str_repr.rs
pyo3_special_method_derive_macro_0_21/: Cargo.toml  README.md
pyo3_special_method_derive_macro_0_21/src/: lib.rs  str_repr.rs
src/: dir.rs  lib.rs  str_repr.rs
tests/: dict.rs  dict_enum.rs  dict_enum_skipped.rs  dict_enum_unit.rs  dict_enum_unit_skipped.rs  dict_skipped.rs  dir_enum_complex.rs  dir_enum_skip_complex.rs  dir_enum_skip_unit.rs  dir_skip.rs  dir_struct.rs  enum_str_repr_skip.rs  enum_str_repr_skip_complex.rs  enum_str_repr_skip_str_repr.rs  functional.rs  functional_enum_complex.rs  functional_struct.rs  functional_struct_pub_and_attr_skip.rs  functional_struct_pub_skip.rs  getattr.rs  getattr_enum.rs  getattr_enum_skipped.rs  getattr_enum_skipped_unit.rs  getattr_enum_unit.rs  struct_str_repr_pub_skip.rs  struct_str_repr_skip.rs  struct_str_repr_skip_str_repr.rs
