[workspace]
members = [
    "pyo3_special_method_derive_macro",
    "pyo3_special_method_derive_example",
    "pyo3_special_method_derive"
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
description = "Automatically derive Python dunder methods for your Rust code"
license = "MIT"
repository = "https://github.com/EricLBuehler/pyo3-special-method-derive"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["multiple-pymethods"] }
