[workspace]
members = [
    "pyo3_special_method_derive_macro_0_21",
    "pyo3_special_method_derive_example_0_21",
    "pyo3_special_method_derive_0_21"
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
description = "Automatically derive Python dunder methods for your Rust code"
license = "MIT"
repository = "https://github.com/EricLBuehler/pyo3-special-method-derive"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["multiple-pymethods"] }
pyo3_special_method_derive_macro_0_21 = { path = "pyo3_special_method_derive_macro_0_21" }
