[package]
name = "pyo3_special_method_derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3_special_method_derive_macro = {path = "../pyo3_special_method_derive_macro"}
pyo3 = { version = "0.22", features = ["multiple-pymethods"] }
