[package]
name = "pyo3_special_method_derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = "2.0.66"
quote = "1.0"
proc-macro2 = "1.0"
quote_into = "0.2.0"
pyo3 = { version = "0.21", features = ["multiple-pymethods"] }
pyo3_special_method_derive_lib = { path = "../pyo3_special_method_derive_lib" }
[lib]
proc-macro = true