[package]
name = "pyo3_special_method_derive_macro_0_21"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = "2.0.66"
quote = "1.0"
proc-macro2 = "1.0"
quote_into = "0.2.0"
pyo3.workspace = true

[lib]
proc-macro = true
